# tpool

./: CMakeLists.txt  README.md  install.sh  tpool.pc.in  uninstall.sh
docs/: platform_abstraction.md
include/: tpool.h  tpool_config.h  tpool_platform.h
src/: tpool.c
tests/: CmakeLists.txt  main_test.c
